ingress-resources/ingress-rules.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: applications-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /green
        backend:
          serviceName: svc-green 
          servicePort: 80
      - path: /yellow
        backend:
          serviceName: svc-yellow  
          servicePort: 80
